added oauth2 for swagger, auth middleware, updated routes
