# docs/swagger.json
@@ -1,59 +1,75 @@
 {
     "swagger": "2.0",
     "info": {
-        "contact": {},
-        "license": {}
-    },
-    "paths": {
-        "/welcome": {
-            "get": {
-                "description": "This is the welcome page",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json",
-                    "application/json"
-                ],
-                "tags": [
-                    "welcome"
-                ],
-                "summary": "welcome page",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/main.Welcome"
-                        }
-                    }
-                }
-            }
+        "description": "This is a sample server Petstore server.",
+        "title": "Go Gin API framework - Boilerplate code",
+        "termsOfService": "http://swagger.io/terms/",
+        "contact": {
+            "name": "API Support",
+            "url": "http://www.swagger.io/support",
+            "email": "support@swagger.io"
         },
-        "/welcome2": {
-            "post": {
-                "description": "This is the welcome2 page",
-                "consumes": [
-                    "application/json"
+        "license": {
+            "name": "Apache 2.0",
+            "url": "http://www.apache.org/licenses/LICENSE-2.0.html"
+        },
+        "version": "3.0"
+    },
+    "basePath": "/",
+    "paths": {
+        "/auth/user": {
+            "get": {
+                "security": [
+                    {
+                        "": []
+                    }
                 ],
+                "description": "auth handler",
                 "produces": [
                     "application/json",
-                    "text/plain"
+                    "application/json"
                 ],
                 "tags": [
-                    "welcome2"
+                    "User"
                 ],
-                "summary": "welcome2 page",
+                "summary": "auth handler",
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/main.User"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/main.Welcome2"
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/info": {
+            "get": {
+                "description": "This is the info page",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Info"
+                ],
+                "summary": "info page",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
                         }
                     }
                 }
@@ -61,25 +77,26 @@
         }
     },
     "definitions": {
-        "main.Welcome": {
+        "main.User": {
             "type": "object",
             "properties": {
-                "id": {
-                    "type": "string",
-                    "format": "int64",
-                    "example": "1"
+                "access_token": {
+                    "type": "string"
+                },
+                "authenticated": {
+                    "type": "boolean"
+                },
+                "username": {
+                    "type": "string"
                 }
             }
-        },
-        "main.Welcome2": {
-            "type": "object",
-            "properties": {
-                "name": {
-                    "type": "string",
-                    "format": "string",
-                    "example": "somename"
-                }
-            }
+        }
+    },
+    "securityDefinitions": {
+        "": {
+            "type": "oauth2",
+            "flow": "implicit",
+            "authorizationUrl": "http://localhost:8099/auth/realms/demo/protocol/openid-connect/auth"
         }
     }
 }
