# routes.go
@@ -9,7 +9,15 @@ import (
 )
 
 func (s *Server) Routes(r *gin.Engine) {
-	r.GET("/welcome", s.Welcome)
-	r.POST("/welcome2", s.Welcome2)
-	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
+	r.LoadHTMLGlob("templates/*")
+	r.GET("/oauth2-redirect.html", s.Oauth2RedirectUri)
+	r.GET("/info", s.Info)
+	url := ginSwagger.URL("http://localhost:8088/swagger/doc.json")
+	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler, url))
+
+	authUser := r.Group("/auth")
+	{
+		authUser.Use(s.AuthMiddleware())
+		authUser.GET("/user", s.AuthWelcome)
+	}
 }
